# 17ce

./: .gitignore  README.md  docker-compose.yml  iconn_users_from_matrix.csv  readme.txt
addons/addons-community/: README.md
config/: odoo.conf
custom-v17/: requirements.txt
custom-v17/account_asset/: __manifest__.py
custom-v17/approvals/: __manifest__.py
custom-v17/ceris_rebranding/: __init__.py  __manifest__.py  hooks.py
custom-v17/date_range/: __manifest__.py
custom-v17/delivery_compat/: __manifest__.py
custom-v17/documents/: __manifest__.py
custom-v17/documents_account/: __manifest__.py
custom-v17/documents_fleet/: __manifest__.py
custom-v17/documents_hr/: __manifest__.py
custom-v17/documents_hr_contract/: __manifest__.py
custom-v17/documents_hr_holidays/: __manifest__.py
custom-v17/documents_hr_payroll/: __manifest__.py
custom-v17/documents_hr_recruitment/: __manifest__.py
custom-v17/documents_l10n_be_hr_payroll/: __manifest__.py
custom-v17/documents_product/: __manifest__.py
custom-v17/documents_project/: __manifest__.py
custom-v17/documents_sign/: __manifest__.py
custom-v17/documents_spreadsheet/: __manifest__.py
custom-v17/ecommerce_theme/: LICENSE  README.md  __init__.py  __manifest__.py
custom-v17/hr_payroll/: __init__.py  __manifest__.py
custom-v17/hr_payroll_document/: README.rst  __manifest__.py
custom-v17/iconnexion_custom/: __init__.py  __manifest__.py
custom-v17/iconnexion_mccoy_custom/: __manifest__.py
custom-v17/imin_hr_custom/: __manifest__.py
custom-v17/setup/_metapackage/: pyproject.toml
(+2332 files in other folders)
